[package]
name = "iotmesh"
description = "A set of clients to manage devices and IoT. Mainly used in Sync project but available for everyone."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mossida/iotmesh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
