[package]
name = "iotmesh"
version = "0.1.0"
description = "A set of clients to manage devices and IoT. Mainly used in Sync project but available for everyone."

edition = "2021"

readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/mossida/iotmesh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
