[package]
name = "iotmesh"
version = "0.1.1"
description = ""

edition = "2021"

readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/mossida/iotmesh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
all = []

[dependencies]
